tests/files/parser_tests/should_fail/074.cmdr
//Should not parse ternary expression
x = true ? x :;